Change default profile to 'starrsem'

--- a/nextflow.config
+++ b/nextflow.config
@@ -14,10 +14,10 @@ process {
         "${task.process}/${task.tool}${task.profile}"
     }
 
-    profile = '' 
+    profile = ''
 
     errorStrategy = 'ignore'
-    
+
     tag = { (id ? id.replace(':', '_') : species) + "-${task.tool}-${task.version}"}
 
     container = { "grape/${task.process.toLowerCase()}:${task.tool.toLowerCase()}-${task.version}" }
@@ -34,14 +34,14 @@ process {
 
 profiles {
     standard {
-        // default profile - same as gemflux
+        // default profile - same as starrsem
         includeConfig "config/fastaIndex/SAMtools.config"
-        includeConfig "config/mapping/GEM.config"
+        includeConfig "config/mapping/STAR.config"
         includeConfig "config/mergeBam/SAMtools.config"
         includeConfig "config/inferExp/RSeQC.config"
-        includeConfig "config/bigwig/RGCRG.config"
+        includeConfig "config/bigwig/STAR.config"
         includeConfig "config/contig/RGCRG.config"
-        includeConfig "config/quantification/FLUX.config"
+        includeConfig "config/quantification/RSEM.config"
     }
 
     starrsem {
@@ -76,13 +76,13 @@ profiles {
         includeConfig "config/contig/RGCRG.config"
         includeConfig "config/quantification/FLUX.config"
     }
-    
+
     test {
-        // test profile - same as 'standard'       
+        // test profile - same as 'standard'
         params.index = "$baseDir/test-index.txt"
         params.genome = "$baseDir/data/genome.fa"
-        params.annotation = "$baseDir/data/annotation.gtf"  
-        
+        params.annotation = "$baseDir/data/annotation.gtf"
+
         includeConfig "config/fastaIndex/SAMtools.config"
         includeConfig "config/mapping/GEM.config"
         includeConfig "config/mergeBam/SAMtools.config"
