Set bamSort to 'samtools' in default profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -35,6 +35,8 @@ process {
 profiles {
     standard {
         // default profile - same as starrsem
+        params.bamSort = "samtools"
+        
         includeConfig "config/fastaIndex/SAMtools.config"
         includeConfig "config/mapping/STAR.config"
         includeConfig "config/mergeBam/SAMtools.config"
