Enable trace and timeline in default profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -34,8 +34,11 @@ process {
 
 profiles {
     standard {
-        // default profile - same as starrsem
+        // default profile - same as starrsem +  samtools sorting for STAR
         params.bamSort = "samtools"
+
+        trace.enabled = true
+        timeline.enabled = true
         
         includeConfig "config/fastaIndex/SAMtools.config"
         includeConfig "config/mapping/STAR.config"
