Update test profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -85,12 +85,14 @@ profiles {
         params.genome = "$baseDir/data/genome.fa"
         params.annotation = "$baseDir/data/annotation.gtf"
 
+        params.bamSort = "samtools"
+
         includeConfig "config/fastaIndex/SAMtools.config"
-        includeConfig "config/mapping/GEM.config"
+        includeConfig "config/mapping/STAR.config"
         includeConfig "config/mergeBam/SAMtools.config"
         includeConfig "config/inferExp/RSeQC.config"
-        includeConfig "config/bigwig/RGCRG.config"
+        includeConfig "config/bigwig/STAR.config"
         includeConfig "config/contig/RGCRG.config"
-        includeConfig "config/quantification/FLUX.config"
+        includeConfig "config/quantification/RSEM.config"
     }
 }
