Update circle ci configuration

--- a/circle.yml
+++ b/circle.yml
@@ -3,9 +3,11 @@ machine:
     version: oraclejdk8
   services:
     - docker
-    
+
+environment:
+  PROFILE: test
+  CHECKDIR: checksums
+
 test:
   override:
-    - curl -fsSL get.nextflow.io | bash && chmod +x nextflow
-    - ./nextflow -download
-    - ./nextflow run . -with-docker
+    - ./test.sh
