--- a/nextflow.config
+++ b/nextflow.config
@@ -80,19 +80,17 @@ profiles {
     }
 
     test {
-        // test profile - same as 'standard'
+        // test profile - same as 'gemflux'
         params.index = "$baseDir/test-index.txt"
         params.genome = "$baseDir/data/genome.fa"
         params.annotation = "$baseDir/data/annotation.gtf"
 
-        params.bamSort = "samtools"
-
         includeConfig "config/fastaIndex/SAMtools.config"
-        includeConfig "config/mapping/STAR.config"
+        includeConfig "config/mapping/GEM.config"
         includeConfig "config/mergeBam/SAMtools.config"
         includeConfig "config/inferExp/RSeQC.config"
-        includeConfig "config/bigwig/STAR.config"
+        includeConfig "config/bigwig/RGCRG.config"
         includeConfig "config/contig/RGCRG.config"
-        includeConfig "config/quantification/RSEM.config"
+        includeConfig "config/quantification/FLUX.config"
     }
 }
