Updated resource config for `test` profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -92,5 +92,35 @@ profiles {
         includeConfig "config/bigwig/RGCRG.config"
         includeConfig "config/contig/RGCRG.config"
         includeConfig "config/quantification/FLUX.config"
+        
+        $index {
+            cpus=1
+            memory='1G'
+            time='10m'
+        }
+        $mapping {
+            cpus=1
+            memory='1G'
+            time='10m'
+        }
+        $mergeBam {
+            cpus=1
+            memory='1G'
+        }
+        $bigwig {
+            cpus=1
+            memory='1G'
+            time='10m'
+        }
+        $contig {
+            cpus=1
+            memory='1G'
+            time='10m'
+        }
+        $quantification {
+            cpus=1
+            memory='1G'
+            time='10m'
+        }         
     }
 }
