Fix resources in test profile from PR#10

--- a/nextflow.config
+++ b/nextflow.config
@@ -57,6 +57,27 @@ profiles {
         includeConfig "config/quantification/RSEM.config"
     }
 
+    star25 {
+        // profile for STAR and RSEM with updated versions and STAR gene counts
+        params.bamSort = "samtools"
+
+        includeConfig "config/fastaIndex/SAMtools.config"
+        includeConfig "config/mapping/STAR.config"
+        includeConfig "config/mergeBam/SAMtools.config"
+        includeConfig "config/inferExp/RSeQC.config"
+        includeConfig "config/bigwig/STAR.config"
+        includeConfig "config/contig/RGCRG.config"
+        includeConfig "config/quantification/RSEM.config"
+
+        process {
+            $index.version = '2.5.1b'
+            $mapping.version = '2.5.1b'
+            $t_index.version = '1.2.23'
+            $quantification.version = '1.2.23'
+            $bigwig.version = '2.5.1b'
+        }
+    }
+
     starflux {
         // profile for STAR and FLUX
         includeConfig "config/fastaIndex/SAMtools.config"
@@ -93,34 +114,36 @@ profiles {
         includeConfig "config/contig/RGCRG.config"
         includeConfig "config/quantification/FLUX.config"
         
-        $index {
-            cpus=1
-            memory='1G'
-            time='10m'
-        }
-        $mapping {
-            cpus=1
-            memory='1G'
-            time='10m'
-        }
-        $mergeBam {
-            cpus=1
-            memory='1G'
-        }
-        $bigwig {
-            cpus=1
-            memory='1G'
-            time='10m'
-        }
-        $contig {
-            cpus=1
-            memory='1G'
-            time='10m'
-        }
-        $quantification {
-            cpus=1
-            memory='1G'
-            time='10m'
-        }         
+        process {
+            $index {
+                cpus = 1
+                memory = '1G'
+                time = '10m'
+            }
+            $mapping {
+                cpus = 1
+                memory = '1G'
+                time = '10m'
+            }
+            $mergeBam {
+                cpus = 1
+                memory = '1G'
+            }
+            $bigwig {
+                cpus = 1
+                memory = '1G'
+                time = '10m'
+            }
+            $contig {
+                cpus = 1
+                memory = '1G'
+                time = '10m'
+            }
+            $quantification {
+                cpus = 1
+                memory = '1G'
+                time = '10m'
+            }  
+        }       
     }
 }
