Add resources for t_index process in test profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -139,6 +139,11 @@ profiles {
                 memory = '1G'
                 time = '10m'
             }
+            $t_index {
+                cpus = 1
+                memory = '1G'
+                time = '10m'
+            }
             $quantification {
                 cpus = 1
                 memory = '1G'
