Add encode3 profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -57,26 +57,6 @@ profiles {
         includeConfig "config/quantification/RSEM.config"
     }
 
-    star25 {
-        // profile for STAR and RSEM with updated versions and STAR gene counts
-        params.bamSort = "samtools"
-
-        includeConfig "config/fastaIndex/SAMtools.config"
-        includeConfig "config/mapping/STAR.config"
-        includeConfig "config/mergeBam/SAMtools.config"
-        includeConfig "config/inferExp/RSeQC.config"
-        includeConfig "config/bigwig/STAR.config"
-        includeConfig "config/contig/RGCRG.config"
-        includeConfig "config/quantification/RSEM.config"
-
-        process {
-            $index.version = '2.5.1b'
-            $mapping.version = '2.5.1b'
-            $t_index.version = '1.2.23'
-            $quantification.version = '1.2.23'
-            $bigwig.version = '2.5.1b'
-        }
-    }
 
     starflux {
         // profile for STAR and FLUX
@@ -150,5 +130,26 @@ profiles {
                 time = '10m'
             }  
         }       
+    }
+    
+    encode3 {
+        // profile for STAR and RSEM with updated versions and STAR gene counts
+        params.bamSort = "samtools"
+
+        includeConfig "config/fastaIndex/SAMtools.config"
+        includeConfig "config/mapping/STAR.config"
+        includeConfig "config/mergeBam/SAMtools.config"
+        includeConfig "config/inferExp/RSeQC.config"
+        includeConfig "config/bigwig/STAR.config"
+        includeConfig "config/contig/RGCRG.config"
+        includeConfig "config/quantification/RSEM.config"
+
+        process {
+            $index.version = '2.5.1b'
+            $mapping.version = '2.5.1b'
+            $bigwig.version = '2.5.1b'
+            $t_index.version = '1.2.23'
+            $quantification.version = '1.2.23'
+        }
     }
 }
