--- a/nextflow.config
+++ b/nextflow.config
@@ -39,6 +39,7 @@ profiles {
         
         includeConfig "config/fastaIndex/SAMtools.config"
         includeConfig "config/mapping/STAR.config"
+        includeConfig "config/contaminant/STAR.config"
         includeConfig "config/mergeBam/SAMtools.config"
         includeConfig "config/inferExp/RSeQC.config"
         includeConfig "config/bigwig/STAR.config"
@@ -50,6 +51,7 @@ profiles {
         // profile for STAR and RSEM
         includeConfig "config/fastaIndex/SAMtools.config"
         includeConfig "config/mapping/STAR.config"
+        includeConfig "config/contaminant/STAR.config"
         includeConfig "config/mergeBam/SAMtools.config"
         includeConfig "config/inferExp/RSeQC.config"
         includeConfig "config/bigwig/STAR.config"
@@ -62,6 +64,7 @@ profiles {
         // profile for STAR and FLUX
         includeConfig "config/fastaIndex/SAMtools.config"
         includeConfig "config/mapping/STAR.config"
+        includeConfig "config/contaminant/STAR.config"
         includeConfig "config/mergeBam/SAMtools.config"
         includeConfig "config/inferExp/RSeQC.config"
         includeConfig "config/bigwig/STAR.config"
@@ -137,6 +140,7 @@ profiles {
         params.bamSort = "samtools"
 
         includeConfig "config/fastaIndex/SAMtools.config"
+        includeConfig "config/contaminant/STAR.config"
         includeConfig "config/mapping/STAR.config"
         includeConfig "config/mergeBam/SAMtools.config"
         includeConfig "config/inferExp/RSeQC.config"
