Add bamStats step

--- a/nextflow.config
+++ b/nextflow.config
@@ -41,6 +41,8 @@ profiles {
         includeConfig "config/mapping/STAR.config"
         includeConfig "config/contaminant/STAR.config"
         includeConfig "config/mergeBam/SAMtools.config"
+        includeConfig "config/genomicRegions/BEDtools.config"
+        includeConfig "config/bamStats/bamstats.config"
         includeConfig "config/inferExp/RSeQC.config"
         includeConfig "config/bigwig/STAR.config"
         includeConfig "config/contig/RGCRG.config"
@@ -53,6 +55,8 @@ profiles {
         includeConfig "config/mapping/STAR.config"
         includeConfig "config/contaminant/STAR.config"
         includeConfig "config/mergeBam/SAMtools.config"
+        includeConfig "config/genomicRegions/BEDtools.config"
+        includeConfig "config/bamStats/bamstats.config"
         includeConfig "config/inferExp/RSeQC.config"
         includeConfig "config/bigwig/STAR.config"
         includeConfig "config/contig/RGCRG.config"
@@ -66,6 +70,8 @@ profiles {
         includeConfig "config/mapping/STAR.config"
         includeConfig "config/contaminant/STAR.config"
         includeConfig "config/mergeBam/SAMtools.config"
+        includeConfig "config/genomicRegions/BEDtools.config"
+        includeConfig "config/bamStats/bamstats.config"
         includeConfig "config/inferExp/RSeQC.config"
         includeConfig "config/bigwig/STAR.config"
         includeConfig "config/contig/RGCRG.config"
@@ -77,6 +83,8 @@ profiles {
         includeConfig "config/fastaIndex/SAMtools.config"
         includeConfig "config/mapping/GEM.config"
         includeConfig "config/mergeBam/SAMtools.config"
+        includeConfig "config/genomicRegions/BEDtools.config"
+        includeConfig "config/bamStats/bamstats.config"
         includeConfig "config/inferExp/RSeQC.config"
         includeConfig "config/bigwig/RGCRG.config"
         includeConfig "config/contig/RGCRG.config"
@@ -92,6 +100,8 @@ profiles {
         includeConfig "config/fastaIndex/SAMtools.config"
         includeConfig "config/mapping/GEM.config"
         includeConfig "config/mergeBam/SAMtools.config"
+        includeConfig "config/genomicRegions/BEDtools.config"
+        includeConfig "config/bamStats/bamstats.config"
         includeConfig "config/inferExp/RSeQC.config"
         includeConfig "config/bigwig/RGCRG.config"
         includeConfig "config/contig/RGCRG.config"
@@ -111,6 +121,11 @@ profiles {
             $mergeBam {
                 cpus = 1
                 memory = '1G'
+            }
+            $bamStats {
+                cpus = 1
+                memory = '1G'
+                time = '10m'
             }
             $bigwig {
                 cpus = 1
@@ -143,6 +158,8 @@ profiles {
         includeConfig "config/contaminant/STAR.config"
         includeConfig "config/mapping/STAR.config"
         includeConfig "config/mergeBam/SAMtools.config"
+        includeConfig "config/genomicRegions/BEDtools.config"
+        includeConfig "config/bamStats/bamstats.config"
         includeConfig "config/inferExp/RSeQC.config"
         includeConfig "config/bigwig/STAR.config"
         includeConfig "config/contig/RGCRG.config"
