Add Docker container configuration for new containers based on Alpine Linux

--- a/config/contaminant/STAR.config
+++ b/config/contaminant/STAR.config
@@ -16,7 +16,7 @@ process {
         cpus = 8
         memory = '62G'
         time = '48h'
-        container = { "grape/mapping:${task.tool.toLowerCase()}-${task.version}" }
+        container = { "grape/mapping:${task.tool.toLowerCase()}-${task.version}-alpine" }
         ext {
             matchNmin = 0
             matchNminOverLread = 0.66
