--- a/config/fastaIndex/SAMtools.config
+++ b/config/fastaIndex/SAMtools.config
@@ -4,7 +4,7 @@ process {
     $fastaIndex {
         tool = 'SAMtools'
         version = '0.1.19'
-        container = "grape/contig:rgcrg-0.1"
+        container = "grape/contig:rgcrg-0.1-alpine"
     }
 
 }
