--- a/config/genomicRegions/BEDtools.config
+++ b/config/genomicRegions/BEDtools.config
@@ -4,7 +4,7 @@ process {
     $genomicRegions {
         tool = 'BEDtools'
         version = '2.19.1'
-        container = "grape/contig:rgcrg-0.1"
+        container = "grape/contig:rgcrg-0.1-alpine"
     }
 
 }
