--- a/config/mergeBam/SAMtools.config
+++ b/config/mergeBam/SAMtools.config
@@ -6,7 +6,7 @@ process {
         version = '0.1.19'
         cpus = 8
         memory = '31G'
-        container = "grape/contig:rgcrg-0.1"
+        container = "grape/contig:rgcrg-0.1-alpine"
     }
 
 }
