--- a/nextflow.config
+++ b/nextflow.config
@@ -4,6 +4,7 @@ manifest.mainScript = 'grape-pipeline.nf'
 //Use Docker by default
 docker {
     enabled = true
+    runOptions = "--entrypoint sh"
 }
 
 // Process configuration
@@ -20,14 +21,14 @@ process {
 
     tag = { (id ? id.replace(':', '_') : species) + "-${task.tool}-${task.version}"}
 
-    container = { "grape/${task.process.toLowerCase()}:${task.tool.toLowerCase()}-${task.version}" }
+    container = { "grape/${task.process.toLowerCase()}:${task.tool.toLowerCase()}-${task.version}-alpine" }
 
     $index {
-    	container = { "grape/mapping:${task.tool.toLowerCase()}-${task.version}" }
+    	container = { "grape/mapping:${task.tool.toLowerCase()}-${task.version}-alpine" }
     }
 
     $t_index {
-    	container = { "grape/quantification:${task.tool.toLowerCase()}-${task.version}" }
+    	container = { "grape/quantification:${task.tool.toLowerCase()}-${task.version}-alpine" }
     }
 
 }
