--- a/config/bigwig/RGCRG.config
+++ b/config/bigwig/RGCRG.config
@@ -20,7 +20,7 @@ process {
         cpus = 4
         memory = '15G'
         time = '12h'
-        container = { "grape/contig:${task.tool.toLowerCase()}-${task.version}" }
+        container = { "grape/contig:${task.tool.toLowerCase()}-${task.version}-alpine" }
     }
 
 }
