Fix tool name for BEDTools in genomicRegions process config

--- a/config/genomicRegions/BEDTools.config
+++ b/config/genomicRegions/BEDTools.config
@@ -2,7 +2,7 @@
 process {
 
     $genomicRegions {
-        tool = 'BEDtools'
+        tool = 'BEDTools'
         version = '2.19.1'
         container = "grape/contig:rgcrg-0.1-alpine"
     }
