Update config files to use ext properties

--- a/config/bigwig/RGCRG.config
+++ b/config/bigwig/RGCRG.config
@@ -9,18 +9,18 @@ def bwStrandViews = [
 
 // Process configuration
 process {
-
     $bigwig {
-        tool = 'RGCRG'
-        version = '0.1'
-        profile = { '-' + readStrand }
-        views = {
-            bwStrandViews[readStrand]
-        }
         cpus = 4
         memory = '15G'
         time = '12h'
-        container = { "grape/contig:${task.tool.toLowerCase()}-${task.version}" }
+        container = { "grape/contig:${task.ext.tool.toLowerCase()}-${task.ext.version}" }
+        ext {
+            tool = 'RGCRG'
+            version = '0.1'
+            profile = { '-' + readStrand }
+            views = {
+                bwStrandViews[readStrand]
+            }
+        }
     }
-
 }
