--- a/config/contig/RGCRG.config
+++ b/config/contig/RGCRG.config
@@ -1,13 +1,13 @@
 // Process configuration
 process {
-
     $contig {
-        tool = 'RGCRG'
-        version = '0.1'
-        profile = { '-' + readStrand }
         cpus = 4
         memory = '31G'
         time = '12h'
+        ext {
+            tool = 'RGCRG'
+            version = '0.1'
+            profile = { '-' + readStrand }
+        }
     }
-
 }
