--- a/config/inferExp/RSeQC.config
+++ b/config/inferExp/RSeQC.config
@@ -1,9 +1,10 @@
 // Process configuration
 process {
-
     $inferExp {
-        tool = 'RSeQC'
-        version = '2.3.9'
+        ext {
+            tool = 'RSeQC'
+            version = '2.3.9'
+        }
     }
-
 }
+    
