--- a/config/mergeBam/SAMtools.config
+++ b/config/mergeBam/SAMtools.config
@@ -1,12 +1,12 @@
 // Process configuration
 process {
-
     $mergeBam {
-        tool = 'SAMtools'
-        version = '0.1.19'
         cpus = 8
         memory = '31G'
         container = "grape/contig:rgcrg-0.1"
+        ext {
+            tool = 'SAMtools'
+            version = '0.1.19'
+        }
     }
-
 }
