--- a/config/quantification/FLUX.config
+++ b/config/quantification/FLUX.config
@@ -1,15 +1,15 @@
 // Process configuration
 process {
-
     $quantification {
-        tool = 'FLUX'
-        version = '1.6.1'
-        profile = { '-' + readStrand }
         cpus = 2
         memory = '31G'
         time = '24h'
-        mode = 'Genome'
-        fileType = 'gtf'
+        ext {
+            tool = 'FLUX'
+            version = '1.6.1'
+            profile = { '-' + readStrand }
+            mode = 'Genome'
+            fileType = 'gtf'
+        }
     }
-
 }
