--- a/config/quantification/RSEM.config
+++ b/config/quantification/RSEM.config
@@ -1,22 +1,22 @@
 // Process configuration
 process {
-
-    $t_index {
+    ext {
         tool = 'RSEM'
         version = '1.2.21'
+    }
+    $t_index {
         cpus = 4
         memory = '15G'
         time = '24h'
     }
     $quantification {
-        tool = 'RSEM'
-        version = '1.2.21'
-        profile = { '-' + (pairedEnd ? 'Paired-End' : 'Single-End') + '-' + readStrand }
         cpus = 8
         memory = '62G'
         time = '24h'
-        mode = 'Transcriptome'
-        fileType = 'tsv'
+        ext {
+            profile = { '-' + (pairedEnd ? 'Paired-End' : 'Single-End') + '-' + readStrand }
+            mode = 'Transcriptome'
+            fileType = 'tsv'
+        }
     }
-
 }
