--- a/nextflow.config
+++ b/nextflow.config
@@ -9,25 +9,25 @@ docker {
 // Process configuration
 process {
 
-    command = {
-        cpus = task.cpus
-        "${task.process}/${task.tool}${task.profile}"
+    ext {
+        command = {
+            cpus = task.cpus
+            "${task.process}/${task.ext.tool}${task.ext.profile}"
+        }
+        profile = ''
     }
-
-    profile = ''
-
     errorStrategy = 'ignore'
 
-    tag = { (id ? id.replace(':', '_') : species) + "-${task.tool}-${task.version}"}
+    tag = { (id ? id.replace(':', '_') : species) + "-${task.ext.tool}-${task.ext.version}"}
 
-    container = { "grape/${task.process.toLowerCase()}:${task.tool.toLowerCase()}-${task.version}" }
+    container = { "grape/${task.process.toLowerCase()}:${task.ext.tool.toLowerCase()}-${task.ext.version}" }
 
     $index {
-    	container = { "grape/mapping:${task.tool.toLowerCase()}-${task.version}" }
+    	container = { "grape/mapping:${task.ext.tool.toLowerCase()}-${task.ext.version}" }
     }
 
     $t_index {
-    	container = { "grape/quantification:${task.tool.toLowerCase()}-${task.version}" }
+    	container = { "grape/quantification:${task.ext.tool.toLowerCase()}-${task.ext.version}" }
     }
 
 }
