--- a/config/fastaIndex/SAMtools.config
+++ b/config/fastaIndex/SAMtools.config
@@ -1,10 +1,10 @@
 // Process configuration
 process {
-
     $fastaIndex {
-        tool = 'SAMtools'
-        version = '0.1.19'
         container = "grape/contig:rgcrg-0.1"
+        ext {
+            tool = 'SAMtools'
+            version = '0.1.19'
+        }
     }
-
 }
