--- a/config/mapping/GEM.config
+++ b/config/mapping/GEM.config
@@ -1,21 +1,21 @@
 // Process configuration
 process {
-
-    $index {
+    ext {
         tool = 'GEM'
         version = '1.7.1'
+    }
+    $index {
         cpus = 4
         memory = '62G'
         time = '24h'
     }
     $mapping {
-        tool = 'GEM'
-        version = '1.7.1'
-        readGroup = { readGroupList.collect { it.join("=") }.join(",") }
-        profile = { "-${task.version.split("\\.")[0..1].join(".")}" + (pairedEnd ? '-Paired-End' : '-Single-End') }
         cpus = 8
         memory = '62G'
         time = '48h'
+        ext {
+            readGroup = { readGroupList.collect { it.join("=") }.join(",") }
+            profile = { "-${task.ext.version.split("\\.")[0..1].join(".")}" + (pairedEnd ? '-Paired-End' : '-Single-End') }
+        }
     }
-
 }
