--- a/config/mapping/STAR.config
+++ b/config/mapping/STAR.config
@@ -1,21 +1,21 @@
 // Process configuration
 process {
-
-    $index {
+    ext {
         tool = 'STAR'
         version = '2.4.0j'
+    }
+    $index {
         cpus = 4
         memory = '62G'
         time = '24h'
     }
     $mapping {
-        tool = 'STAR'
-        version = '2.4.0j'
-        readGroup = { readGroupList.collect { it.join(":") }.join(" ") }
-        profile = { "-${task.version.split("\\.")[0..1].join(".")}" + (task.sort ? "-"+task.sort : '') + (quantificationMode ? "-"+quantificationMode : '') + (params.addXs ? "-XS" : '') }
         cpus = 8
         memory = '62G'
         time = '48h'
+        ext {
+            readGroup = { readGroupList.collect { it.join(":") }.join(" ") }
+            profile = { "-${task.version.split("\\.")[0..1].join(".")}" + (task.sort ? "-"+task.sort : '') + (quantificationMode ? "-"+quantificationMode : '') + (params.addXs ? "-XS" : '') }
+        }
     }
-
 }
