Enable trace by default in nextflow config

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,9 +2,10 @@
 manifest.mainScript = 'grape-pipeline.nf'
 
 //Use Docker by default
-docker {
-    enabled = true
-}
+docker.enabled = true
+
+//Enable trace by default
+trace.enabled = true
 
 // Process configuration
 process {
