Fix ext properties access in mapping configuration

--- a/config/mapping/STAR.config
+++ b/config/mapping/STAR.config
@@ -17,7 +17,7 @@ process {
             tool = 'STAR'
             version = '2.4.0j'
             readGroup = { readGroupList.collect { it.join(":") }.join(" ") }
-            profile = { "-${task.version.split("\\.")[0..1].join(".")}" + (task.sort ? "-"+task.sort : '') + (quantificationMode ? "-"+quantificationMode : '') + (params.addXs ? "-XS" : '') }
+            profile = { "-${task.ext.version.split("\\.")[0..1].join(".")}" + (task.ext.sort ? "-"+task.ext.sort : '') + (quantificationMode ? "-"+quantificationMode : '') + (params.addXs ? "-XS" : '') }
         }
     }
 }
