Update test profiles and ci configuration

--- a/circle.yml
+++ b/circle.yml
@@ -1,12 +1,13 @@
 machine:
+  pre:
+    - curl -sSL https://s3.amazonaws.com/circle-downloads/install-circleci-docker.sh | bash -s -- 1.10.0
   java:
     version: oraclejdk8
   services:
     - docker
-  environment:
-    PROFILE: test
-    CHECKDIR: checksums
 
 test:
   override:
-    - ./test.sh
+    - PROFILE=testGemFlux ./test.sh
+    - PROFILE=testStarRsem ./test.sh
+    - PROFILE=testStarFlux ./test.sh
