Disable Docker by default and update test script - resolve #22

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,12 +1,11 @@
 // main script name
 manifest.mainScript = 'grape-pipeline.nf'
 
-//Use Docker by default
+//Set Docker options
 docker {
-    enabled = true
     sudo = false
     fixOwnership = true
-    runOptions = "-u `id -u $USER`"
+    runOptions = '-u $(id -u)'
 }
 
 //Enable trace by default
