Update test profiles and main config - address #25

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,6 +11,9 @@ docker {
 //Enable trace by default
 trace.enabled = true
 
+//Include test profiles
+includeConfig "test-profiles.config"
+
 // Process configuration
 process {
 
