--- a/test-profiles.config
+++ b/test-profiles.config
@@ -1,4 +1,76 @@
+docker {
+    enabled = true
+}
+
 profiles {
+
+    test {
+        // default test profile same as 'starrsem'
+        params.index = "$baseDir/test-index.txt"
+        params.genome = "$baseDir/data/genome.fa"
+        params.annotation = "$baseDir/data/annotation.gtf"
+
+        includeConfig "config/fastaIndex/SAMtools.config"
+        includeConfig "config/mapping/STAR.config"
+        includeConfig "config/mergeBam/SAMtools.config"
+        includeConfig "config/inferExp/RSeQC.config"
+        includeConfig "config/bigwig/STAR.config"
+        includeConfig "config/contig/RGCRG.config"
+        includeConfig "config/quantification/RSEM.config"
+        
+        process {
+            $index {
+                cpus = 1
+                memory = '4G'
+                time = '10m'
+            }
+            $mapping {
+                cpus = 1
+                memory = '2G'
+                time = '10m'
+            }
+            $contaminantIndex {
+                cpus = 1
+                memory = '4G'
+                time = '10m'
+            }
+            $contaminantMapping {
+                cpus = 1
+                memory = '2G'
+                time = '10m'
+            }
+            $mergeBam {
+                cpus = 1
+                memory = '1G'
+            }
+            $bamStats {
+                cpus = 1
+                memory = '1G'
+                time = '10m'
+            }
+            $bigwig {
+                cpus = 1
+                memory = '1G'
+                time = '10m'
+            }
+            $contig {
+                cpus = 1
+                memory = '1G'
+                time = '10m'
+            }
+            $t_index {
+                cpus = 1
+                memory = '1G'
+                time = '10m'
+            }
+            $quantification {
+                cpus = 1
+                memory = '1G'
+                time = '10m'
+            }  
+        }       
+    }
+
     testGemFlux {
         // test profile for 'gemflux'
         params.index = "$baseDir/test-index.txt"
