--- a/nextflow.config
+++ b/nextflow.config
@@ -1,18 +1,22 @@
 // main script name
 manifest.mainScript = 'grape-pipeline.nf'
 
-//Set Docker options
+// small input dataset for testing
+params {
+        index = "$baseDir/test-index.txt"
+        genome = "$baseDir/data/genome.fa"
+        annotation = "$baseDir/data/annotation.gtf"
+}
+
+// Docker is disabled by default and uses the following options when activated
 docker {
     sudo = false
     fixOwnership = true
     runOptions = '-u $(id -u)'
 }
 
-//Enable trace by default
+// Enable trace by default
 trace.enabled = true
-
-//Include test profiles
-includeConfig "test-profiles.config"
 
 // Process configuration
 process {
@@ -26,9 +30,13 @@ process {
     }
     errorStrategy = 'ignore'
 
-    tag = { (id ? id.replace(':', '_') : species) + "-${task.ext.tool}-${task.ext.version}"}
+    tag = { 
+        (id ? id.replace(':', '_') : species) + "-${task.ext.tool}-${task.ext.version}"
+    }
 
-    container = { "grape/${task.process.toLowerCase()}:${task.ext.tool.toLowerCase()}-${task.ext.version}" }
+    container = { 
+        "grape/${task.process.toLowerCase()}:${task.ext.tool.toLowerCase()}-${task.ext.version}" 
+    }
 
     $index {
     	container = { "grape/mapping:${task.ext.tool.toLowerCase()}-${task.ext.version}" }
@@ -40,9 +48,11 @@ process {
 
 }
 
+// Pipeline profiles
 profiles {
+    
+    // default profile - same as starrsem with samtools sorting
     standard {
-        // default profile - same as starrsem
         params.bamSort = "samtools"
         
         includeConfig "config/fastaIndex/SAMtools.config"
@@ -54,8 +64,9 @@ profiles {
         includeConfig "config/quantification/RSEM.config"
     }
 
+    
+    // profile with STAR and RSEM
     starrsem {
-        // profile for STAR and RSEM
         includeConfig "config/fastaIndex/SAMtools.config"
         includeConfig "config/mapping/STAR.config"
         includeConfig "config/mergeBam/SAMtools.config"
@@ -66,8 +77,8 @@ profiles {
     }
 
 
+    // profile with STAR and FLUX
     starflux {
-        // profile for STAR and FLUX
         includeConfig "config/fastaIndex/SAMtools.config"
         includeConfig "config/mapping/STAR.config"
         includeConfig "config/mergeBam/SAMtools.config"
@@ -77,8 +88,8 @@ profiles {
         includeConfig "config/quantification/FLUX.config"
     }
 
+    // profile with GEM and FLUX
     gemflux {
-        // profile for GEM and FLUX
         includeConfig "config/fastaIndex/SAMtools.config"
         includeConfig "config/mapping/GEM.config"
         includeConfig "config/mergeBam/SAMtools.config"
@@ -88,8 +99,8 @@ profiles {
         includeConfig "config/quantification/FLUX.config"
     }
     
+    // Encode 3 profile with STAR and RSEM updated versions and STAR gene counts
     encode3 {
-        // profile for STAR and RSEM with updated versions and STAR gene counts
         params.bamSort = "samtools"
 
         includeConfig "config/fastaIndex/SAMtools.config"
