--- a/config/quantification/RSEM.config
+++ b/config/quantification/RSEM.config
@@ -1,6 +1,6 @@
 // Process configuration
 process {
-    $t_index {
+    $txIndex {
         ext {
             tool = 'RSEM'
             version = '1.2.21'
