Use withName process selector in configuration files - close #39

--- a/config/bigwig/RGCRG.config
+++ b/config/bigwig/RGCRG.config
@@ -9,7 +9,7 @@ def bwStrandViews = [
 
 // Process configuration
 process {
-    $bigwig {
+    withName: bigwig {
         ext {
             tool = 'RGCRG'
             version = '0.1'
