--- a/config/contig/RGCRG.config
+++ b/config/contig/RGCRG.config
@@ -1,6 +1,6 @@
 // Process configuration
 process {
-    $contig {
+    withName: contig {
         ext {
             tool = 'RGCRG'
             version = '0.1'
