--- a/config/inferExp/RSeQC.config
+++ b/config/inferExp/RSeQC.config
@@ -1,6 +1,6 @@
 // Process configuration
 process {
-    $inferExp {
+    withName: inferExp {
         ext {
             tool = 'RSeQC'
             version = '2.3.9'
