--- a/config/mapping/GEM.config
+++ b/config/mapping/GEM.config
@@ -1,12 +1,13 @@
 // Process configuration
 process {
-    $index {
+    withName: 'index' {
         ext {
             tool = 'GEM'
             version = '1.7.1'
         }
     }
-    $mapping {
+
+    withName: 'mapping' {
         ext {
             tool = 'GEM'
             version = '1.7.1'
