--- a/config/mapping/STAR.config
+++ b/config/mapping/STAR.config
@@ -1,12 +1,13 @@
 // Process configuration
-process {
-    $index {
+process { 
+    withName: 'index' {
         ext {
             tool = 'STAR'
             version = '2.4.0j'
         }
     }
-    $mapping {
+
+    withName: 'mapping' {
         ext {
             tool = 'STAR'
             version = '2.4.0j'
