--- a/config/mergeBam/SAMtools.config
+++ b/config/mergeBam/SAMtools.config
@@ -1,6 +1,6 @@
 // Process configuration
 process {
-    $mergeBam {
+    withName: mergeBam {
         ext {
             tool = 'SAMtools'
             version = '1.3'
