--- a/config/quantification/FLUX.config
+++ b/config/quantification/FLUX.config
@@ -1,6 +1,6 @@
 // Process configuration
 process {
-    $quantification {
+    withName: quantification {
         ext {
             tool = 'FLUX'
             version = '1.6.1'
