--- a/nextflow.config
+++ b/nextflow.config
@@ -104,11 +104,21 @@ profiles {
         includeConfig "config/quantification/RSEM.config"
 
         process {
-            $index.version = '2.5.1b'
-            $mapping.version = '2.5.1b'
-            $bigwig.version = '2.5.1b'
-            $t_index.version = '1.2.23'
-            $quantification.version = '1.2.23'
+            withName: 'index' {
+                version = '2.5.1b'
+            }
+            withName: 'mapping' {
+                version = '2.5.1b'
+            }
+            withName: 'bigwig' {
+                version = '2.5.1b'
+            }
+            withName: 't_index' {
+                version = '1.2.23'
+            }
+            withName: 'quantification' {
+                version = '1.2.23'
+            }
         }
     }
 }
