--- a/config/bigwig/STAR.config
+++ b/config/bigwig/STAR.config
@@ -9,7 +9,7 @@ def bwStrandViews = [
 
 // Process configuration
 process {
-    $bigwig {
+    withName: bigwig {
         ext {
             tool = 'STAR'
             version = '2.4.0j'
