--- a/config/fastaIndex/SAMtools.config
+++ b/config/fastaIndex/SAMtools.config
@@ -1,6 +1,6 @@
 // Process configuration
 process {
-    $fastaIndex {
+    withName: fastaIndex {
         ext {
             tool = 'SAMtools'
             version = '1.3'
