--- a/config/quantification/RSEM.config
+++ b/config/quantification/RSEM.config
@@ -1,12 +1,13 @@
 // Process configuration
 process {
-    $txIndex {
+    withName: 'txIndex' {
         ext {
             tool = 'RSEM'
             version = '1.2.21'
         }
     }
-    $quantification {
+    
+    withName: 'quantification' {
         ext {
             tool = 'RSEM'
             version = '1.2.21'
