--- a/docker/process/quantification/rsem/Dockerfile
+++ b/docker/process/quantification/rsem/Dockerfile
@@ -1,5 +1,11 @@
 # Dockerfile for the grape-nf RSEM quantification image
 #
+ARG SAMBAMBA_VER=0.7.0
+ARG RSEM_VER=1.2.21
+
+FROM grapenf/sambamba:${SAMBAMBA_VER} AS sambamba
+FROM grapenf/rsem:${RSEM_VER} AS rsem
+
 FROM grapenf/base
 
 LABEL author.name="Emilio Palumbo"
@@ -7,5 +13,8 @@ LABEL author.email="emiliopalumbo@gmail.com"
 
 RUN apk add --no-cache perl R
 
-COPY --from=grapenf/rsem:1.2.21 /usr/local/bin/* /usr/local/bin/
-COPY --from=grapenf/sambamba:0.6.8 /usr/local/bin/sambamba /usr/local/bin/
+ARG SAMBAMBA_VER=0.7.0
+ENV _SAMBAMBA_VER $SAMBAMBA_VER
+
+COPY --from=rsem /usr/local/bin/* /usr/local/bin/
+COPY --from=sambamba /usr/local/bin/sambamba /usr/local/bin/
