--- a/docker/tool/sambamba/Dockerfile.compile
+++ b/docker/tool/sambamba/Dockerfile.compile
@@ -2,8 +2,6 @@
 #
 FROM ubuntu:16.04 AS builder
 
-ARG LDC_VERSION=1.11.0
-
 RUN apt-get update && \
     apt-get install -y --no-install-recommends build-essential \
                                                ca-certificates \
@@ -12,6 +10,8 @@ RUN apt-get update && \
                                                llvm \
                                                python3 \
                                                zlib1g-dev
+
+ARG LDC_VERSION=1.11.0
 
 RUN curl -fsSL "https://github.com/ldc-developers/ldc/releases/download/v${LDC_VERSION}/ldc2-${LDC_VERSION}-linux-x86_64.tar.xz" \
     | tar xJ && \
@@ -22,8 +22,10 @@ ENV \
     LD_LIBRARY_PATH="/ldc/lib:/usr/lib:/lib:${LD_LIBRARY_PATH}" \
     LIBRARY_PATH="/ldc/lib:/usr/lib:/lib:${LD_LIBRARY_PATH}"
 
+ARG REVISION=v0.7.0
+
 RUN git clone --recursive https://github.com/biod/sambamba.git && \
-    cd sambamba && \
+    cd sambamba && git checkout $REVISION && \
     make
 
 FROM grapenf/base
