[ci skip] Fix ihec index path

--- a/nextflow.config
+++ b/nextflow.config
@@ -95,7 +95,7 @@ profiles {
     // IHEC profile
     ihec {
         // IHEC test data and references
-        params.index = 'ihec-index.txt'
+        params.index = "$baseDir/ihec-index.txt"
         params.genome = 'http://ftp.ebi.ac.uk/pub/databases/blueprint/reference/20150407_reference_files/GRCh38_no_alt_analysis_set.201503031.fa.gz'
         params.annotation = 'ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_29/gencode.v29.annotation.gtf.gz'
         
