[ci skip] Add computing resources to 'ihec' profile config

--- a/nextflow.config
+++ b/nextflow.config
@@ -102,6 +102,9 @@ profiles {
         params.markDuplicates = true
         parmas.bamSort = 'sambamba'
 
+        # Computing resources
+        includeConfig "$baseDir/ihec-resources.config"
+
         includeConfig "config/fastaIndex/SAMtools.config"
         includeConfig "config/mapping/STAR.config"
         includeConfig "config/mergeBam/SAMtools.config"
