Fix wrong comment in config file

--- a/nextflow.config
+++ b/nextflow.config
@@ -102,7 +102,7 @@ profiles {
         params.markDuplicates = true
         parmas.bamSort = 'sambamba'
 
-        # Computing resources
+        // Computing resources
         includeConfig "$baseDir/ihec-resources.config"
 
         includeConfig "config/fastaIndex/SAMtools.config"
