Enable autoMounts for Singulrity by default

--- a/nextflow.config
+++ b/nextflow.config
@@ -15,6 +15,11 @@ docker {
     runOptions = '-u $(id -u)'
 }
 
+// Singularity is disabled by default and uses autoMounts when enabled
+singularity {
+    autoMounts = true
+}
+
 // Enable trace by default
 trace.enabled = true
 
