Set glibc version to 2.25 for base Docker image

--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -1,6 +1,6 @@
 # Dockerfile for the grape-nf base image
 #
-FROM       frolvlad/alpine-glibc
+FROM       frolvlad/alpine-glibc:glibc-2.25 
 
 LABEL author.name="Emilio Palumbo"
 LABEL author.email="emiliopalumbo@gmail.com"
