Add tool versions to contig Dockerfile

--- a/docker/process/contig/rgcrg/Dockerfile
+++ b/docker/process/contig/rgcrg/Dockerfile
@@ -5,5 +5,8 @@ FROM grapenf/python
 LABEL author.name="Emilio Palumbo"
 LABEL author.email="emiliopalumbo@gmail.com"
 
+ARG BEDTOOLS_VER=2.19.1
+ARG SAMBAMBA_VER=0.7.0
+
 COPY --from=grapenf/bedtools:2.19.1 /usr/local/bin/* /usr/local/bin/
 COPY --from=grapenf/sambamba:0.7.0 /usr/local/bin/sambamba /usr/local/bin/
