--- a/docker/tool/rseqc/Dockerfile
+++ b/docker/tool/rseqc/Dockerfile
@@ -1,11 +1,13 @@
 # Dockerfile for RSeQC
 #
-FROM       grapenf/python
+FROM grapenf/python
 
 LABEL author.name="Emilio Palumbo"
 LABEL author.email="emiliopalumbo@gmail.com"
 
-ENV _RSEQC_VERSION 2.6.4
+ARG RSEQC_VER=2.6.4
+
+ENV _RSEQC_VERSION ${RSEQC_VER}
 
 RUN apk add --no-cache --virtual=.build-dependencies build-base \
     zlib-dev \
